@@ -1,4 +1,7 @@
-2008-02-14  Andreas K. Foerster  <info@akfoerster.de>
+2008-02-17  Andreas K. Foerster  <info@akfoerster.de>
+
+        * avatar.c (text_background_color):
+	new variable
 
 	* avatar.c (avt_drawchar):
 	  optimized, support for bold and underline
